Rework and repare issues in PlayerRepository, Controllers and Views; Remowe all id redirections to HeroController;
- Now Hero models are loading to Views by Players property ActiveHeroId;
- Changing to another Hero needs Authorization;
- SelectorController is responsible for changing ActiveHeroId and redirecting to further action;

--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -8,10 +8,10 @@
     <div class="col-md-5">
         <partial name="_HeroBasicPresentation" model="@Model.Basics" /><br />
         <div class="btn-group">
-            <a class="btn btn-primary" asp-action="EditNickName" asp-route-id="@Model.Id">
+            <a class="btn btn-primary" asp-action="EditNickName">
                 Edit Name
             </a>
-            <a class="btn btn-primary" asp-action="EditAvatar" asp-route-id="@Model.Id">
+            <a class="btn btn-primary" asp-action="EditAvatar">
                 Edit Avatar
             </a>
         </div>
