--- a/wizards/WizardsWeb/Views/Hero/EditNickName.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/EditNickName.cshtml
@@ -15,14 +15,11 @@
             <hr/>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <input asp-for="Id" hidden="true" />
-            </div>
-            <div class="form-group">
                 <label asp-for="NickName" class="control-label"></label>
                 <input asp-for="NickName" class="form-control" />
             </div>
             <div class="btn-group">
-                <a type="button" class="btn btn-warning" asp-action="Details" asp-route-id="@Model.Id">Back to Details</a>
+                <a type="button" class="btn btn-warning" asp-action="Details">Back to Details</a>
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
