--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -34,11 +34,11 @@
                     @hero.Profession
                 </td>
                 <td>
-                    <a type="button" class="btn btn-primary" asp-controller="Hero" asp-action="Details" asp-route-id="@hero.Id">
+                    <a type="button" class="btn btn-primary" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Details">
                         Play Character
                     </a>
                     <br/><br/>
-                    <a type="button" class="btn btn-danger btn-sm" asp-controller="Hero" asp-action="Delete" asp-route-id="@hero.Id">
+                    <a type="button" class="btn btn-danger btn-sm" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Delete">
                         Delete
                     </a>
                 </td>
