--- a/wizards/WizardsWeb/Views/Player/Create.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Create.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Create new Player";
 }
 
-<h1>Create new Player's Account</h1>
+@*<h1>Create new Player's Account</h1>
 
 <hr />
 <div class="row">
@@ -46,5 +46,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
