add new login and register

--- a/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
@@ -13,7 +13,7 @@
         <label>@Model.UserName</label>
     </div>
     <div class="col-12">
-        <label asp-for="Email" class="font-weight-bold"></label>
+        <label asp-for="1" class="font-weight-bold"></label>
     </div>
     <div class="col-12">
         <label>@Model.Email</label>
@@ -25,3 +25,45 @@
         <label>@Model.DateOfBirth.Date.ToString("d")</label>
     </div>
 </div>
+    *********
+
+@*    <div class="col-12">
+        <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h6 class="my-0">UserName:</h6>
+                    <small class="text-muted">
+                        <label>@Model.UserName</label>
+                    </small>
+                </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h6 class="my-0">Email:</h6>
+                    <small class="text-muted">
+                        <label>@Model.Email</label>
+                    </small>
+                </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h6 class="my-0">DateOfBirth:</h6>
+                    <small class="text-muted">
+                        <label>@Model.DateOfBirth.Date.ToString("d")</label>
+                    </small>
+                </div>
+            </li>
+        </ul>*@
+
+        @*          <li class="list-group-item d-flex justify-content-between lh-sm">
+        <div>
+        <h6 class="my-0">Second product</h6>
+        <small class="text-muted">Brief description</small>
+        </div>
+        <span class="text-muted">$8</span>
+        </li>*@
+
+
+
+@*    </div>
+</div>*@
