--- a/wizards/WizardsWeb/Views/Player/Login.cshtml
+++ b/wizards/WizardsWeb/Views/Player/Login.cshtml
@@ -58,7 +58,7 @@
                                 </div>
 
                                 <div class="text-center pt-1 mb-5 pb-1">
-                                    <input type="submit" class="btn btn-primary btn-block mb-4" value="Login" />
+                                    <input type="submit" class="btn btn-outline-primary btn-block mb-4" value="Login" />
 
                                 </div>
 
@@ -66,7 +66,7 @@
                                     <p class="mb-0 me-2 mx-2">Don't have an account?</p>
                                     <br />
                                     <div>
-                                        <a class="btn btn-outline-primary" id="register" asp-controller="Player" asp-action="Create">Register</a>
+                                        <a class="btn btn-outline-warning" id="register" asp-controller="Player" asp-action="Create">Register</a>
                                     </div>
 
                                 </div>
