--- a/wizards/WizardsWeb/Views/Shared/_LoginPartial.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_LoginPartial.cshtml
@@ -8,15 +8,15 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item btn-group">
-        <a id="manage" class="btn btn-light" asp-controller="Player" asp-action="Details">@UserManager.GetUserName(User)</a>
-        <a id="logout" class="btn btn-danger" asp-controller="Player" asp-action="Logout">Logout</a>
+        <a id="manage" class="btn btn-outline-light" asp-controller="Player" asp-action="Details">@UserManager.GetUserName(User)</a>
+        <a id="logout" class="btn btn-outline-warning" asp-controller="Player" asp-action="Logout">Logout</a>
     </li>
 }
 else
 {
     <li class="nav-item btn-group">
-        <a class="btn btn-primary" id="register" asp-controller="Player" asp-action="Create">Register</a>
-        <a class="btn btn-warning" id="login" asp-controller="Player" asp-action="Login">Login</a>
+        <a class="btn btn-outline-primary" id="login" asp-controller="Player" asp-action="Login">Login</a>
+        <a class="btn btn-outline-warning" id="register" asp-controller="Player" asp-action="Create">Register</a>
     </li>
 }
 </ul>
