--- a/wizards/WizardsWeb/Views/Home/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="cover-container flex-fill d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="text-center bg-dark">
+        <h1 class="display-4">Welcome</h1>
+        <p>Are you lost wizard?</p>
+
+    </div>
 </div>
+
