--- a/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
@@ -1,37 +1,26 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model WizardsWeb.ModelViews.PlayerDetailsModelView
 
-@*<h2>@Model.UserName</h2>*@
-<h2>Player card information</h2>
-@*<a class="btn btn-primary" asp-action="Edit">Edit Player's Profile</a>*@
+
+
 <hr />
 <div class="row">
-@*    <div class="col-12">
-        <label asp-for="UserName" class="font-weight-bold"></label>
-    </div>
     <div class="col-12">
-        <label>@Model.UserName</label>
+        <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    Player card information
+                </div>
+            </li>
+        </ul>
     </div>
-    <div class="col-12">
-        <label asp-for="Email" class="font-weight-bold"></label>
-    </div>
-    <div class="col-12">
-        <label>@Model.Email</label>
-    </div>
-    <div class="col-12">
-        <label asp-for="DateOfBirth" class="font-weight-bold"></label>
-    </div>
-    <div class="col-12">
-        <label>@Model.DateOfBirth.Date.ToString("d")</label>
-    </div>
-</div>*@
 
     <div class="col-12">
         <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between lh-sm">
                 <div>
                     <h6 class="my-0">User name:</h6>
-                    <small class="text-muted">
+                    <small class="font-weight-bold">
                         <label>@Model.UserName</label>
                     </small>
                     <hr />
