--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -11,10 +11,10 @@
 
 
 
-<body>
-    <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+<body class="bg-dark">
+    <div class="cover-container d-flex w-100 h-100 mx-auto bg-dark flex-column">
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark text-white border-bottom box-shadow mb-3">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark text-white box-shadow">
                 <div class="container">
 
                     <img src="~/Images/logo.png" class="img-responsive" alt="Site Logo" style="height:20%; width: 20%" />
@@ -53,56 +53,22 @@
             </nav>
         </header>
 
-        <div class="container-fluid pb-3">
-            <div class="row h-100">
-@*                <aside class="col-sm-2">
-                    <div class="bg-dark text-white h-100">
-                        <ul class="nav flex-sm-column">
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="News" asp-action="Index">News</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="About" asp-action="Index">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" asp-area="" asp-controller="Authors" asp-action="Index">Authors</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white disabled" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>
-                        </ul>
-                    </div>
-                </aside>*@
-                <main class="col">
-                    <div class="bg-light border p-3">
+        <div class="container-fluid bg-dark d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-                        <div class="container">
+
+                <main class="col bg-dark">
+                    <div class="bg-dark p-3">
+                        <div class="container bg-dark">
                             <main role="main" class="pb-3">
-                                Are you lost wizard?
-
                                 @RenderBody()
                             </main>
                         </div>
-
-                        @* <h2>Main</h2>
-                        <p>Sriracha biodiesel taxidermy organic post-ironic, Intelligentsia salvia mustache 90's code editing brunch. Butcher polaroid VHS art party, hashtag Brooklyn deep v PBR narwhal sustainable mixtape swag wolf squid tote bag. Tote bag cronut semiotics, raw denim deep v taxidermy messenger bag. Tofu YOLO Etsy, direct trade ethical Odd Future jean shorts paleo. Forage Shoreditch tousled aesthetic irony, street art organic Bushwick artisan cliche semiotics ugh synth chillwave meditation. Shabby chic lomo plaid vinyl chambray Vice. Vice sustainable cardigan, Williamsburg master cleanse hella DIY 90's blog.</p>
-                        <p>Ethical Kickstarter PBR asymmetrical lo-fi. Dreamcatcher street art Carles, stumptown gluten-free Kickstarter artisan Wes Anderson wolf pug. Godard sustainable you probably haven't heard of them, vegan farm-to-table Williamsburg slow-carb readymade disrupt deep v. Meggings seitan Wes Anderson semiotics, cliche American Apparel whatever. Helvetica cray plaid, vegan brunch Banksy leggings +1 direct trade. Wayfarers codeply PBR selfies. Banh mi McSweeney's Shoreditch selfies, forage fingerstache food truck occupy YOLO Pitchfork fixie iPhone fanny pack art party Portland.</p>
-                        <hr />
-                        <h4>More content...</h4>
-                        <p>Ethical Kickstarter PBR asymmetrical lo-fi. Dreamcatcher street art Carles, stumptown gluten-free Kickstarter artisan Wes Anderson wolf pug. Godard sustainable you probably haven't heard of them, vegan farm-to-table Williamsburg slow-carb readymade disrupt deep v. Meggings seitan Wes Anderson semiotics, cliche American Apparel whatever. Helvetica cray plaid, vegan brunch Banksy leggings +1 direct trade. Wayfarers codeply PBR selfies. Banh mi McSweeney's Shoreditch selfies, forage fingerstache food truck occupy YOLO Pitchfork fixie iPhone fanny pack art party Portland.</p>
-                        <hr />
-                        <h4>More content...</h4>
-                        <p>Sriracha biodiesel taxidermy organic post-ironic, Intelligentsia salvia mustache 90's code editing brunch. Butcher polaroid VHS art party, hashtag Brooklyn deep v PBR narwhal sustainable mixtape swag wolf squid tote bag. Tote bag cronut semiotics, raw denim deep v taxidermy messenger bag. Tofu YOLO Etsy, direct trade ethical Odd Future jean shorts paleo. Forage Shoreditch tousled aesthetic irony, street art organic Bushwick artisan cliche semiotics ugh synth chillwave meditation. Shabby chic lomo plaid vinyl chambray Vice. Vice sustainable cardigan, Williamsburg master cleanse hella DIY 90's blog.</p>*@
-
                     </div>
                 </main>
-            </div>
+
         </div>
 
-        <footer class="footer text-muted navbar-light bg-dark box-shadow">
+        <footer class="footer mt-auto text-muted navbar-light bg-dark box-shadow">
             <div class="container" style='text-align:center'>
                 &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 1.0
             </div>
