--- a/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayerInfo.cshtml
@@ -1,16 +1,16 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model WizardsWeb.ModelViews.PlayerDetailsModelView
 
-
-
-<hr />
 <div class="row">
     <div class="col-12">
         <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between lh-sm">
                 <div>
-                    Player card information
+                    <h5 class="my-0 font-weight-bold">
+                        PLAYER CARD INFORMATION
+                    </h5>
                 </div>
+
             </li>
         </ul>
     </div>
