--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -1,48 +1,68 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model WizardsWeb.ModelViews.PlayerDetailsModelView
 
-<h2>Player's Heroes</h2>
-<a type="button" class="btn btn-warning" asp-controller="Hero" asp-action="StartCreation">Create New Hero</a>
-<br /><br />
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <label asp-for="Heroes.First().AvatarImageNumber">Avatar</label>
-            </th>
-            <th>
-                <label asp-for="Heroes.First().NickName">Nick Name</label>
-            </th>
-            <th>
-                <label asp-for="Heroes.First().Profession">Profession</label>
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var hero in Model.Heroes)
-        {
-            var avatar = $"Images/Hero/Avatars/Wizard-{hero.AvatarImageNumber}.png";
-            <tr>
-                <td>
-                    <img src="~/@avatar" width="90" height="120" />
-                </td>
-                <td>
-                    @hero.NickName
-                </td>
-                <td>
-                    @hero.Profession
-                </td>
-                <td>
-                    <a type="button" class="btn btn-primary" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Details">
+<div class="row">
+    <div class=" col">
+        <ul class="list-group mb-3">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <div>
+                        <h5 class="my-0 font-weight-bold">
+                            Player's Heroes
+                        </h5>
+                        <hr />
+                        <a type="button" class="btn btn-outline-success" asp-controller="Hero" asp-action="StartCreation">Create New Hero</a>
+                    </div>
+                </div>
+            </li>
+
+            <table class="table table-light table-hover">
+                <thead>
+                    <tr>
+                        <th>
+                            <label asp-for="Heroes.First().AvatarImageNumber">Avatar</label>
+                        </th>
+                        <th>
+                            <label asp-for="Heroes.First().NickName">Nick Name</label>
+                        </th>
+                        <th>
+                            <label asp-for="Heroes.First().Profession">Profession</label>
+                        </th>
+                        <th>
+                            Options
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var hero in Model.Heroes)
+                    {
+                        var avatar = $"Images/Hero/Avatars/Wizard-{hero.AvatarImageNumber}.png";
+                        <tr>
+                            <td>
+                                <img src="~/@avatar" width="90" height="120" />
+                            </td>
+                            <td>
+                                @hero.NickName
+                            </td>
+                            <td>
+                                @hero.Profession
+                            </td>
+                            <td>
+                <li class="nav-item btn-group btn-block">
+                    <a type="button" class="btn btn-outline-primary" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Details">
                         Play Character
                     </a>
-                    <br/><br/>
-                    <a type="button" class="btn btn-danger btn-sm" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Delete">
+                    <br /><br />
+                    <a type="button" class="btn btn-outline-danger" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Delete">
                         Delete
                     </a>
+                </li>
                 </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                </tr>
+                    }
+            </tbody>
+            </table>
+
+        </ul>
+    </div>
+</div>
