--- a/wizards/WizardsWeb/Views/Hero/_HeroBasicPresentation.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroBasicPresentation.cshtml
@@ -1,16 +1,54 @@
 ﻿@model WizardsWeb.ModelViews.Properties.HeroBasicsModelView
 
 <div class="row">
-    <div class="col-md-4">
-        <img src="~/@Model.ProfessionImageAddress" width="100" height="100"/>
-    </div>
-    <div class="col-md-8">
-        <h3>@Model.NickName</h3>
-        <h4>@Model.Profession.ToString()</h4>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <img src="~/@Model.AvatarImageAddress" width="330" height="440" />
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h5 class="my-0 font-weight-bold">
+                        HERO CARD INFORMATION
+                    </h5>
+                </div>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <h4>Hero name:</h4>
+                <h3>@Model.NickName</h3>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div class="col-md-12">
+                    <img src="~/@Model.AvatarImageAddress" width="330" height="440" />
+                </div>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div class="row align-middle">
+                    <div class="col-sm">
+                        <h4>Hero profession:</h4>
+                    </div>
+                    <div class="col-sm">
+                        <h3>@Model.Profession.ToString()</h3>
+                    </div>
+                    <div class="col-sm">
+                        <img src="~/@Model.ProfessionImageAddress" width="100" height="100" />
+                    </div>
+                </div>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div class="col-md-12">
+                    <div class="btn-group btn-block">
+                        <a class="btn btn-outline-primary" asp-action="EditNickName">
+                            Edit Name
+                        </a>
+                        <a class="btn btn-outline-primary" asp-action="EditAvatar">
+                            Edit Avatar
+                        </a>
+                    </div>
+                </div>
+            </li>
+
+        </ul>
     </div>
 </div>
