--- a/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
+++ b/wizards/WizardsWeb/Views/Player/_PlayersHeroes.cshtml
@@ -2,7 +2,7 @@
 @model WizardsWeb.ModelViews.PlayerDetailsModelView
 
 <div class="row">
-    <div class=" col">
+    <div class="col">
         <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between lh-sm">
                 <div>
@@ -29,40 +29,38 @@
                             <label asp-for="Heroes.First().Profession">Profession</label>
                         </th>
                         <th>
-                            Options
+                           <label>Options</label>
                         </th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody> 
                     @foreach (var hero in Model.Heroes)
                     {
                         var avatar = $"Images/Hero/Avatars/Wizard-{hero.AvatarImageNumber}.png";
                         <tr>
-                            <td>
+                            <td class="align-middle">
                                 <img src="~/@avatar" width="90" height="120" />
                             </td>
-                            <td>
+                            <td class="align-middle">
                                 @hero.NickName
                             </td>
-                            <td>
+                            <td class="align-middle">
                                 @hero.Profession
                             </td>
-                            <td>
-                <li class="nav-item btn-group btn-block">
-                    <a type="button" class="btn btn-outline-primary" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Details">
-                        Play Character
-                    </a>
-                    <br /><br />
-                    <a type="button" class="btn btn-outline-danger" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Delete">
-                        Delete
-                    </a>
-                </li>
-                </td>
-                </tr>
+                            <td class="align-middle">
+                                <li class="btn-group btn-block">
+                                    <a type="button" class="btn btn-outline-primary" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Details">
+                                        Play Character
+                                    </a>
+                                    <a type="button" class="btn btn-outline-danger" asp-controller="Selector" asp-action="SelectHero" asp-route-id="@hero.Id" asp-route-actionName="Delete">
+                                        Delete
+                                    </a>
+                                </li>
+                            </td>
+                        </tr>
                     }
-            </tbody>
+                </tbody>
             </table>
-
         </ul>
     </div>
 </div>
