--- a/wizards/WizardsWeb/Views/Hero/_HeroStatistics.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/_HeroStatistics.cshtml
@@ -1,48 +1,41 @@
 ﻿@model WizardsWeb.ModelViews.Properties.StatisticsModelView
 
-<h4>Statistics</h4>
-<hr />
-<div class="col-md-12">
-    <div class="row">
-        <div class="col-md-8">
+<div class="row">
+    <div class="col-md-12">
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h5 class="my-0 font-weight-bold">
+                        Hero statistics
+                    </h5>
+                </div>
+            </li>
+
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
             <label asp-for="RankPoints"></label>
-        </div>
-        <div class="col-md-4">
             @($"{Model.RankPoints:##,##0}")
-        </div>
-    </div>
-    <hr/>
-    <div class="row">
-        <div class="col-md-8">
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
             <label asp-for="TotalMatchPlayed"></label>
-        </div>
-        <div class="col-md-4">
             @($"{Model.TotalMatchPlayed:##,##0}")
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-8">
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
             <label asp-for="TotalMatchWin"></label>
-        </div>
-        <div class="col-md-4">
             @($"{Model.TotalMatchWin:##,##0}")
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-8">
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
             <label asp-for="TotalMatchLoose"></label>
-        </div>
-        <div class="col-md-4">
             @($"{Model.TotalMatchLoose:##,##0}")
-        </div>
-    </div>
-    <hr/>
-    <div class="row">
-        <div class="col-md-8">
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
             <label asp-for="WinRatio"></label>
-        </div>
-        <div class="col-md-4">
             @Model.WinRatio
-        </div>
+            </li>
+        </ul>
     </div>
 </div>
