--- a/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/SetProfession.cshtml
@@ -5,55 +5,115 @@
     ViewData["Title"] = "Set Profession";
 }
 
-<h1>Create New Hero</h1>
-<br />
-<h3>Choose Profession of your hero</h3>
+<div class="row">
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h4 class="my-0 font-weight-bold">
+                        Create New Hero
+                    </h4>
+                </div>
+            </li>
+        </ul>
+
+        <br />
+
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h5 class="my-0 font-weight-bold">
+                        Choose profession of your hero
+                    </h5>
+                </div>
+            </li>
+
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h class="my-0 font-weight-bold">
+                        <form asp-action="SetProfession">
+                            <input asp-for="AvatarImageNumber" hidden="true" />
+
+@*                            <div class="row">
+                                <div class="col-md-1" align="center">
+                                    <input asp-for="Profession" type="radio" value="@HeroProfession.Sorcerer" />
+                                </div>
+                                <div class="col-md-2" align="center">
+                                    <img src="~/Images/Hero/Professions/Sorcerer.png" width="100" height="100" />
+                                </div>
+                                <div class="col-md-7">
+                                    <h5>Sorcerer</h5>
+                                    <p>
+                                        Sorcerers are using the power of natural elements to deal high damage and protect themselves.
+                                        They are using staffs, spell-books or scepters as weapons.
+                                        Theirs power is as wild as element they use.
+                                    </p>
+                                </div>
+                            </div>*@
+
+                            <div class="row">
+
+                                <div class="col-md-1" align="center">
+
+                                </div>
+
+                                <div class="col-md-2" align="center">
+                                    <div>
+                                        <label>
+                                            <input asp-for="Profession" type="radio" value="@HeroProfession.Sorcerer" class="border-warning" />
+                                            <img src="~/Images/Hero/Professions/Sorcerer.png" width="100" height="100" />
+                                        </label>
+                                    </div>
+                                </div>
 
 
-<form asp-action="SetProfession">
-    <input asp-for="AvatarImageNumber" hidden="true"/>
-    <hr/>
-    <div class="row">
-        <div class="col-md-1" align="center">
-            <input asp-for="Profession" type="radio" value="@HeroProfession.Sorcerer"/>
+                                <div class="col-md-7">
+                                    <h5>Sorcerer</h5>
+                                    <p>
+                                        Sorcerers are using the power of natural elements to deal high damage and protect themselves.
+                                        They are using staffs, spell-books or scepters as weapons.
+                                        Theirs power is as wild as element they use.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <hr />
+                            <div class="row">
+                                <div class="col-md-1" align="center">
+                                    <input asp-for="Profession" type="radio" value="@HeroProfession.Necromancer" disabled="true" />
+                                </div>
+                                <div class="col-md-2" align="center">
+                                    <img src="~/Images/Hero/Professions/Necromancer.png" width="100" height="100" />
+                                </div>
+                                <div class="col-md-7">
+                                    <h5>Necromancer</h5>
+                                    <p>Coming soon...</p>
+                                </div>
+                            </div>
+                            <hr class="align-content-between" />
+                            <div class="form-group">
+                                <div class="btn-group btn-block">
+                                    <input type="submit" asp-action="SetProfession" value="Set profession" class="btn btn-outline-primary" />
+                                    <a class="btn btn-outline-danger" asp-controller="Player" asp-action="Details">Leave Creator</a>
+                                </div>
+                            </div>
+                        </form>
+                    </h>
+                </div>
+            </li>
+        </ul>
+
+
+
+
+
+        <div>
         </div>
-        <div class="col-md-2" align="center">
-            <img src="~/Images/Hero/Professions/Sorcerer.png" width="100" height="100"/>
-        </div>
-        <div class="col-md-7">
-            <h5>Sorcerer</h5>
-            <p>
-                Sorcerers are using the power of natural elements to deal high damage and protect themselves.
-                They are using staffs, spell-books or scepters as weapons.
-                Theirs power is as wild as element they use.
-            </p>
+
+        @section Scripts {
+            @{
+                await Html.RenderPartialAsync("_ValidationScriptsPartial");
+            }
+        }
         </div>
     </div>
-    <hr/>
-    <div class="row">
-        <div class="col-md-1" align="center">
-            <input asp-for="Profession" type="radio" value="@HeroProfession.Necromancer" disabled="true"/>
-        </div>
-        <div class="col-md-2" align="center">
-            <img src="~/Images/Hero/Professions/Necromancer.png" width="100" height="100"/>
-        </div>
-        <div class="col-md-7">
-            <h5>Necromancer</h5>
-            <p>Coming soon...</p>
-        </div>
-    </div>
-    <hr/>
-    <div class="form-group">
-        <input type="submit" asp-action="SetProfession" value="Set profession" class="btn btn-primary"/>
-    </div>
-</form>
-
-<div>
-    <a class="btn btn-danger"asp-controller="Player" asp-action="Details">Leave Creator</a>
-</div>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
