--- a/wizards/WizardsWeb/Views/Hero/EditAvatar.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/EditAvatar.cshtml
@@ -4,34 +4,79 @@
     ViewData["Title"] = "Edit Avatar";
 }
 
-<h3>Edit Hero's Avatar</h3>
-<form asp-action="EditAvatar">
-    <hr/>
-    <span>This operation costs: </span><span class="font-weight-bold">@($"{Model.Cost:##,##0}")</span><span> gold!</span><br />
-    <span>Your balance: </span><span class="font-weight-bold">@($"{Model.Gold:##,##0}")</span><span> gold</span><br/>
-    <span asp-validation-for="AvatarImageNumber" class="text-danger font-weight-bold"></span>
-    <hr/>
-    <div class="row">
+<div class="row">
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <div>
+                    <h4 class="my-0 font-weight-bold">
+                        Edit Hero's Avatar
+                    </h4>
+                </div>
+            </li>
+        </ul>
+        <br />
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between lh-sm">
+                <form asp-action="EditAvatar">
+                    <hr />
+                    <span>This operation costs: </span><span class="font-weight-bold">@($"{Model.Cost:##,##0}")</span><span> gold!</span><br />
+                    <span>Your balance: </span><span class="font-weight-bold">@($"{Model.Gold:##,##0}")</span><span> gold</span><br />
+                    <span asp-validation-for="AvatarImageNumber" class="text-danger font-weight-bold"></span>
+                    <hr />
+                    <div class="row">
+                        @for (int i = 1; i <= 7; i++)
+                        {
+                            var image = $"Images/Hero/Avatars/Wizard-{i}.png";
+                            <div class="col-sm-3">
+                                <div class="row" align="center">
+                                    <img src="~/@image" width="210" height="280" />
+                                </div>
+                                <div class="row">
+                                    <div align="center"><input asp-for="AvatarImageNumber" type="radio" value="@i" /></div>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                    <hr />
+                    <div class="btn-group btn-block">
+                        <a type="button" class="btn btn-outline-warning" asp-action="Details">Back to Details</a>
+                        <input type="submit" value="Set Avatar" class="btn btn-outline-primary" />
+                    </div>
+                </form>
+            </li>
+        </ul>
+
+        @*<h3>Edit Hero's Avatar</h3>
+        <form asp-action="EditAvatar">
+        <hr/>
+        <span>This operation costs: </span><span class="font-weight-bold">@($"{Model.Cost:##,##0}")</span><span> gold!</span><br />
+        <span>Your balance: </span><span class="font-weight-bold">@($"{Model.Gold:##,##0}")</span><span> gold</span><br/>
+        <span asp-validation-for="AvatarImageNumber" class="text-danger font-weight-bold"></span>
+        <hr/>
+        <div class="row">
         @for (int i = 1; i <= 7; i++)
         {
-            var image = $"Images/Hero/Avatars/Wizard-{i}.png";
-            <div class="col-sm-3">
-                <div class="row" align="center">
-                    <img src="~/@image" width="210" height="280"/>
-                </div>
-                <div class="row">
-                    <div align="center"><input asp-for="AvatarImageNumber" type="radio" value="@i"/></div>
-                </div>
-            </div>
+        var image = $"Images/Hero/Avatars/Wizard-{i}.png";
+        <div class="col-sm-3">
+        <div class="row" align="center">
+        <img src="~/@image" width="210" height="280"/>
+        </div>
+        <div class="row">
+        <div align="center"><input asp-for="AvatarImageNumber" type="radio" value="@i"/></div>
+        </div>
+        </div>
         }
-    </div>
-    <hr/>
-    <div class="btn-group">
+        </div>
+        <hr/>
+        <div class="btn-group">
         <a type="button" class="btn btn-warning" asp-action="Details">Back to Details</a>
         <input type="submit" value="Set Avatar" class="btn btn-primary"/>
-    </div>
-</form>
+        </div>
+        </form>*@
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+        @section Scripts {
+            @{
+                await Html.RenderPartialAsync("_ValidationScriptsPartial");
+            }
+        }
