Add Authorisation Handler; Implement SelectorController Method for items;

--- a/wizards/WizardsWeb/Views/Hero/Details.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/Details.cshtml
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="col-md-3">
-        <a type="button" class="btn btn-warning" asp-controller="Inventory" asp-action="ManageInventory">Equipment</a><br /><br />
+        <a type="button" class="btn btn-warning" asp-controller="Inventory" asp-action="Index">Equipment</a><br /><br />
         <a type="button" class="btn btn-warning" asp-action="Merchant">Merchant</a><br /><br />
         <a type="button" class="btn btn-warning" asp-controller="Player" asp-action="Details">Back to Hero choice</a><br /><br />
         <a type="button" class="btn btn-warning disabled" asp-action="ArenaPvP">PvP Arena</a><br /><br />
