--- a/wizards/WizardsWeb/Views/Inventory/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/Index.cshtml
@@ -8,6 +8,10 @@
 <hr />
 
 <div class="row">
+    <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
+</div>
+
+<div class="row">
     <div class="col-8">
         <a class="btn btn-warning" asp-controller="Hero" asp-action="Details">Back to Hero</a>
         <h3>Equipment</h3>
