add exception handling with communicates; Edit veiws for better safety with repairing items;

--- a/wizards/WizardsWeb/Views/Inventory/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/Index.cshtml
@@ -8,7 +8,7 @@
 <hr />
 
 <div class="row">
-    <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
+    <div asp-validation-summary="ModelOnly" id="myCustomSummary" class="col-12 alert alert-danger h2 text-center" style="list-style-type: none;"></div>
 </div>
 
 <div class="row">
@@ -32,3 +32,7 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" 
     crossorigin="anonymous">
 </script>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
