--- a/wizards/WizardsWeb/Views/Inventory/_EnduranceBar.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_EnduranceBar.cshtml
@@ -3,18 +3,7 @@
 <div class="row">
     <div class="col-12">
         <div class="progress">
-            @{
-                var bgColor = "bg-danger";
-                if (Model.Endurance >= 66)
-                {
-                    bgColor = "bg-success";
-                }
-                else if (Model.Endurance < 66 && Model.Endurance >= 33)
-                {
-                    bgColor = "bg-warning";
-                }
-            }
-            <div class="progress-bar text-dark @bgColor"
+            <div class="progress-bar text-dark font-weight-bold @Model.GetEnduranceBarColorClass()"
                  role="progressbar"
                  aria-label="Example with label"
                  style="width: @($"{Model.Endurance:##0}")%;"
