--- a/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/_Inventory.cshtml
@@ -1,7 +1,19 @@
 ﻿@model WizardsWeb.ModelViews.Inventory.InventoryModelView
 
 <div class="col-12">
-    <h3>Inventory</h3>
+    <div class="row">
+        <div class="col-9">
+            <h3>Inventory</h3>
+        </div>
+        <div class="col-3">
+            @if (Model.GetRepairCostForAllItems() >= 1)
+            {
+                <button type="button" class="btn btn-info btn-sm align-content-end" data-bs-toggle="modal" data-bs-target="#repair-all">
+                    Repair all items
+                </button>
+            }
+        </div>
+    </div>
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
             <button class="nav-link active" id="pills-weapons-tab" data-bs-toggle="pill" data-bs-target="#pills-weapons" type="button" role="tab" aria-controls="pills-weapons" aria-selected="true">Weapons</button>
@@ -13,15 +25,46 @@
             <button class="nav-link" id="pills-miscs-tab" data-bs-toggle="pill" data-bs-target="#pills-miscs" type="button" role="tab" aria-controls="pills-miscs" aria-selected="false">Miscs</button>
         </li>
     </ul>
+
     <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-weapons" role="tabpanel" aria-labelledby="pills-weapons-tab" tabindex="0">
-            <partial name="_ItemIndexDetails" model="@Model.Weapons" />
+            <partial name="_ItemIndexDetails" model="@Model.Weapons"/>
         </div>
         <div class="tab-pane fade" id="pills-armors" role="tabpanel" aria-labelledby="pills-armors-tab" tabindex="0">
-            <partial name="_ItemIndexDetails" model="@Model.Armors" />
+            <partial name="_ItemIndexDetails" model="@Model.Armors"/>
         </div>
         <div class="tab-pane fade" id="pills-miscs" role="tabpanel" aria-labelledby="pills-miscs-tab" tabindex="0">
-            <partial name="_ItemIndexDetails" model="@Model.Miscellaneous" />
+            <partial name="_ItemIndexDetails" model="@Model.Miscellaneous"/>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for All Items Repair -->
+<div class="modal fade" id="repair-all" aria-hidden="true" aria-labelledby="label-repair-all" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header table-info">
+                <h3>Repairing all equipped items</h3>
+            </div>
+            <div class="modal-body alert alert-warning">
+                <div class="h5 text-center text-dark">
+                    <span>Do you want to repair all items (including equipped) for </span>
+                    <span class="font-weight-bold">
+                        @($"{Model.GetRepairCostForAllItems():#,##0}")
+                    </span>
+                    <span> Gold?</span>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="btn-group col-12">
+                    <button class="btn btn-warning" data-bs-dismiss="modal">
+                        No
+                    </button>
+                    <a class="btn btn-success" asp-controller="Inventory" asp-action="RepairAll">
+                        Yes
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
