--- a/wizards/WizardsWeb/Views/Home/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Index.cshtml
@@ -2,11 +2,39 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="cover-container flex-fill d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <div class="text-center bg-dark">
-        <h1 class="display-4">Welcome</h1>
-        <p>Are you lost wizard?</p>
+
+<head>
+    <style>
+        body {
+            background-image: url("/Images/Tapeta-3.jpg");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100% 100%;
+        }
+
+        .dupa {
+            background-image: url("/Images/Tapeta-3.jpg");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100% 100%;
+        }
+
+    </style>
+</head>
+
+<body>
+    <div class="cover-container flex-fill d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <div class="dupa">
+            <div class="text-center">
+
+
+                <h1 class="display-4">Welcome</h1>
+                <p>Are you lost wizard?</p>
+            </div>
+        </div>
+
 
     </div>
-</div>
+</body>
+
 
